# ATI-F-T-MODBUS

./: README.md
doc/: TODO.txt
libmodbus-3.0.6/: Makefile.am  configure.ac
libmodbus-3.0.6/sensor/: Makefile.am  connect_ATI_FT  connect_ATI_FT.c  connect_ATI_FT.h  connect_ATI_FT1.c  readme.txt  stamp-h3  unit-test-client  unit-test-client.c  unit-test-server  unit-test.h  unit-test.h.in  version
libmodbus-3.0.6/src/: modbus-rtu.c  modbus.c
libmodbus-3.0.6/tests/: unit-test.h.in
modbus_new/: ReadMe.txt
modbus_new/modbusMaster/: main.cpp  modbusMaster.pro  modbusMaster.pro.user.5ffcdff  modbusmaster.cpp  modbusmaster.h  modbusmaster.ui
modbus_new/modbusSlave/: main.cpp  modbusSlave.pro  modbusSlave.pro.user.5ffcdff  modbusslave.cpp  modbusslave.h  modbusslave.ui
modbus_qt_eg/adueditor/: modbustcpclient_p.h
modbus_qt_eg/master/: mainwindow.cpp  mainwindow.ui  settingsdialog.ui  writeregistermodel.cpp
modbus_qt_eg/slave/: settingsdialog.ui
